# urlpathlib

./: .gitignore  README.md  setup.cfg
src/: urllib.py
src/pyurl/: pyurl.py
src/urlpathlib/: __init__.py  pyurl.py
