[metadata]
name = pyurl
version = 1.0
author = Finn Drabsch
author_email = fdrabsch@enphaseenergy.co.nz
description = Pythonic representation of URLs
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.7
# install_requires =
    # Added package dependencies here

[options.packages.find]
where=src

# [options.entry_points]
# console_scripts =
    # Add console entry points here
# gui_scripts =
    # Add gui entry points here
    