[metadata]
name = urlpathlib
version = 1.0
author = Finn Drabsch
author_email = finndrabsch@gmail.com
description = Pythonic representation of URLs
classifiers = [
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
]

[options]
include_package_data = True
package_dir=
    =src
packages = find_namespace:
python_requires = >=3

[options.packages.find]
where=src

[project.urls]
Homepage = https://github.com/fsd16/urlpathlib